--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ APP_SECRET=749e20c531e93f3f99a8565d3156951a
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+# DATABASE_URL="mysql://app:password@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+ DATABASE_URL="postgresql://postgres:0000@localhost:5432/lunch_break?serverVersionewn=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
