--- a/compose.yaml
+++ b/compose.yaml
@@ -5,10 +5,11 @@ services:
   database:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
+      POSTGRES_DB: ${POSTGRES_DB:-lunch_break}
+      POSTGRES_HOST: 0.0.0.0
       # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
+      POSTGRES_PASSWORD: 0000
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
     healthcheck:
       test: ["CMD", "pg_isready"]
       timeout: 5s
