add error controller and twig and inject logger

--- a/.env
+++ b/.env
@@ -16,6 +16,8 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_SECRET=749e20c531e93f3f99a8565d3156951a
+
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
